# adc_test

./: .gdbinit  CMakeLists.txt  main.c  mini_f103.cfg  usbcom.c  usbcom.h
board/: board.c  board.h
config/: chconf.h  halconf.h  mcuconf.h
doc/: pwr_conv_layout.diy
pchost/: display.py  display_.py  pchost.fbp  pchost.py  pchostgui.py  test.py
