CMAKE_MINIMUM_REQUIRED(VERSION 3.4)
PROJECT(adc_test)

SET(STM32_CHIP STM32F103C8T6)
SET(TOOLCHAIN_PREFIX /)
SET(TARGET_TRIPLET arm-none-eabi)
GET_FILENAME_COMPONENT(CHIBIOS_ROOT ../ChibiOS_17.6.3 ABSOLUTE)
SET(CHIBIOS_PROCESS_STACK_SIZE 0x200)
SET(CHIBIOS_MAIN_STACK_SIZE 0x200)
SET(STM32_LINKER_SCRIPT STM32F103x8.ld)
INCLUDE(../stm32-cmake/cmake/gcc_stm32.cmake)

IF(APPLE)
    STRING(REPLACE "-Wl,-search_paths_first" "" CMAKE_C_LINK_FLAGS ${CMAKE_C_LINK_FLAGS})
    STRING(REPLACE "-Wl,-search_paths_first" "" CMAKE_CXX_LINK_FLAGS ${CMAKE_CXX_LINK_FLAGS})
ENDIF()

SET(CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} -O0")

ENABLE_LANGUAGE(ASM)

FIND_PACKAGE(ChibiOS 17 COMPONENTS rt hal queues buffers pal st pwm serial serial_usb usb adc REQUIRED)

INCLUDE_DIRECTORIES(
        ${CMAKE_CURRENT_SOURCE_DIR}
        ${ChibiOS_INCLUDE_DIRS}
        config
        board
)

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

ADD_DEFINITIONS(-DCORTEX_USE_FPU=FALSE)

SET(SOURCE_FILES main.c board/board.c config/usbcfg.c
        ${CHIBIOS_ROOT}/os/hal/ports/STM32/STM32F1xx/stm32_isr.c)

ADD_EXECUTABLE(${CMAKE_PROJECT_NAME}.elf ${SOURCE_FILES} ${ChibiOS_SOURCES})

STM32_SET_TARGET_PROPERTIES(${CMAKE_PROJECT_NAME}.elf)
STM32_ADD_HEX_BIN_TARGETS(${CMAKE_PROJECT_NAME}.elf)
STM32_PRINT_SIZE_OF_TARGETS(${CMAKE_PROJECT_NAME}.elf)

TARGET_LINK_LIBRARIES(${CMAKE_PROJECT_NAME}.elf)